grid is working

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <button id="xbutton">X</button>
         <article id="popperson">
             <h1>Navn: </h1>
-            <h2>Efternavn: </h2>
+            <h2>Pris: </h2>
             <img class="picup" src="">
             <p>
-                Religion
+                Oprindelse:
             </p>
         </article>
     </section>
@@ -41,7 +41,7 @@
     <template>
         <article id="undervisere">
             <h2>Navn: </h2>
-            <h3>Efternavn: </h3>
+            <h3>Pris: </h3>
             <h4>Alder: </h4>
             <img class="pic" src="" alt="">
             <p></p>
