--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Russo+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="bistro.css">
 </head>
 
@@ -13,15 +15,17 @@
         <button id="xbutton">X</button>
         <article id="popperson">
             <h1>Navn: </h1>
-            <h2>Pris: </h2>
-            <img class="picup" src="">
             <p>
                 Oprindelse:
             </p>
+
+            <h4></h4>
+            <img class="picup" src="">
+            <h2>Pris: </h2>
         </article>
     </section>
 
-    <h1>Alle</h1>
+
     <nav>
         <button class="filter valgt" data-kategori="alle">Alle</button>
         <button class="filter" data-kategori="forretter">Forretter</button>
@@ -40,11 +44,13 @@
 
     <template>
         <article id="undervisere">
-            <h2>Navn: </h2>
-            <h3>Pris: </h3>
-            <h4>Alder: </h4>
-            <img class="pic" src="" alt="">
+
+            <h1>Navn: </h1>
+            <h2>Pris: </h2>
+            <h3>Beskrivelse: </h3>
             <p></p>
+            <img class="pic" src="" alt="">
+            <h4>Kategori: </h4>
         </article>
     </template>
 
