--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-
+    <div class="head">
+        Bistro Babushka
+    </div>
     <section id="popup" class="skjul">
         <button id="xbutton">X</button>
         <article id="popperson">
@@ -33,11 +35,13 @@
         <button class="filter" data-kategori="desserter">Desserter</button>
         <button class="filter" data-kategori="drikkevarer">Drikkevarer</button>
         <button class="filter" data-kategori="sideorders">Sideorders</button>
-        <br>
+        <br><br>
+        <h3>AKTIVER FILTER:</h3>
         <button class="aldersFilter" data-pris_over="50">Vis alle over 50 kr.</button>
     </nav>
-
-
+    <div class="reth1">
+        <h2>MENU:</h2>
+    </div>
     <section class="data-container"></section>
 
 
@@ -46,11 +50,12 @@
         <article id="undervisere">
 
             <h1>Navn: </h1>
-            <h2>Pris: </h2>
+
             <h3>Beskrivelse: </h3>
             <p></p>
             <img class="pic" src="" alt="">
             <h4>Kategori: </h4>
+            <h2>Pris: </h2>
         </article>
     </template>
 
